# gsplat_tt

./: .gitignore  CLAUDE.md  README.md  camera_utils.py  conftest.py  data_structures.py  kernel_backend.py  loading_gaussians.py  main.py  plan_progress.md  pyproject.toml  rasterization.py  requirements-cuda.txt  requirements.txt  setup.sh  utils.py  viewer.py
backends/: README.md  __init__.py
backends/cpu/: __init__.py  backend.py
backends/cuda/: README.md  __init__.py  backend.py
backends/cuda/kernels/: alpha_blend.cu  alpha_blend.h  build.py  pybind.cpp
backends/tt/: __init__.py  backend.py  lpt.py  segments.py
backends/tt/tt-metal/tt_metal/programming_examples/gaussian_splatting/: alpha_blend.cpp  alpha_blend_host.h
backends/tt/tt-metal/ttnn/cpp/ttnn/operations/experimental/gaussian_splatting/alpha_blend/: CMakeLists.txt  alpha_blend.cpp  alpha_blend.hpp  alpha_blend_nanobind.cpp  alpha_blend_nanobind.hpp  sources.cmake
backends/tt/tt-metal/ttnn/cpp/ttnn/operations/experimental/gaussian_splatting/alpha_blend/device/: alpha_blend_device_operation.cpp  alpha_blend_device_operation.hpp  alpha_blend_host.h  alpha_blend_program_factory.cpp  alpha_blend_program_factory.hpp  alpha_blend_types.hpp
backends/tt/tt-metal/ttnn/cpp/ttnn/operations/experimental/gaussian_splatting/alpha_blend/device/kernels/dataflow/: reader_alpha_blend.cpp  writer_alpha_blend.cpp
backends/tt/tt-metal/ttnn/cpp/ttnn/operations/experimental/gaussian_splatting/alpha_blend_combine/: CMakeLists.txt  alpha_blend_combine.cpp  alpha_blend_combine.hpp  alpha_blend_combine_nanobind.cpp  alpha_blend_combine_nanobind.hpp  sources.cmake
backends/tt/tt-metal/ttnn/cpp/ttnn/operations/experimental/gaussian_splatting/alpha_blend_combine/device/: alpha_blend_combine_device_operation.cpp  alpha_blend_combine_device_operation.hpp  alpha_blend_combine_program_factory.cpp  alpha_blend_combine_program_factory.hpp  alpha_blend_combine_types.hpp
backends/tt/tt-metal/ttnn/cpp/ttnn/operations/experimental/gaussian_splatting/alpha_blend_combine/device/kernels/compute/: combine.cpp
backends/tt/tt-metal/ttnn/cpp/ttnn/operations/experimental/gaussian_splatting/alpha_blend_combine/device/kernels/dataflow/: reader_combine.cpp  writer_combine.cpp
benchmark/: __init__.py  camera.py  compare_sched.py  phases.py  plot.py  run.py
benchmark/results/cpu/: cpu.csv  cpu.json
benchmark/results/sched_compare/: sched_compare.csv
benchmark/results/tt/sched_lpt/: tt.csv  tt.json
benchmark/results/tt/sched_round_robin/: tt.csv  tt.json
benchmark/results/tt/sched_segmented/: tt.csv  tt.json
docs/: plan_progress.md
docs/superpowers/plans/: 2026-04-18-alpha-blend-kernel.md  2026-05-12-cuda-alpha-blend.md  2026-06-07-alpha-blend-benchmark-harness.md  2026-06-08-intra-tile-parallelism-phase1.md  2026-06-08-intra-tile-parallelism-phase2.md  2026-06-13-sched-comparison-experiment.md
docs/superpowers/specs/: 2026-04-18-alpha-blend-kernel-design.md  2026-05-12-cuda-alpha-blend-design.md  2026-06-07-alpha-blend-benchmark-harness-design.md  2026-06-08-intra-tile-parallelism-design.md  2026-06-13-sched-comparison-experiment-design.md
gsplat/: __init__.py  __main__.py  backend.py  loading_gaussians.py  pipeline.py  rasterization.py  utils.py  viewer.py
scripts/: bench_cuda_kernel.py  bench_mmap.py  bench_scene.py  bench_stage_dir.py  cap_experiment.py  decompose_sort.py  dev_ttnn_op_render.py  diag_aabb.py  diag_balance.py  dump_kernel_inputs.py  numeric_sanity.py  untilize_prototype.py  verify_aabb.py  verify_sort.py
tests/: test_benchmark_phases.py  test_compare_sched.py  test_cuda_backend.py  test_cuda_kernel.py  test_kernel_integration.py  test_lpt.py  test_numeric_sanity.py  test_tt_segments.py  test_ttnn_op_cache.py  test_viewer_resolution.py
tt-metal/tt_metal/programming_examples/gaussian_splatting/: CMakeLists.txt  alpha_blend.cpp  alpha_blend_host.h
tt-metal/tt_metal/programming_examples/gaussian_splatting/kernels/compute/: alpha_blend_compute.cpp  hello_compute.cpp
tt-metal/tt_metal/programming_examples/gaussian_splatting/kernels/dataflow/: passthrough_reader.cpp  passthrough_writer.cpp  reader_alpha_blend.cpp  writer_alpha_blend.cpp
(+15 files in other folders)
